<resources>
    <string name="app_name">A2</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="add">ADD</string>
    <string name="search">SEARCH</string>
    <string name="add_note">Add Note</string>
    <string name="search_database">Search Database</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
</resources>